Added in masonry for grid

--- a/_factory_admin_form.html
+++ b/_factory_admin_form.html
@@ -26,8 +26,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="pd-admin-form-1">
-                            <header class="pb-2">
-                                <a href="#" name="anchor">Back</a>
+                            <header class="pb-2"><a href="#" name="anchor">Back</a>
                                 <h1>New Daily Challenge</h1>
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
                             </header>
@@ -105,9 +104,7 @@
                                                 </div>
                                                 <div class="pd-form-1-nested-list-item-buttons">
                                                     <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
-                                                    <div class="pd-form-1-nested-list-item-btn-outer">
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer"><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -119,9 +116,7 @@
                                                 </div>
                                                 <div class="pd-form-1-nested-list-item-buttons">
                                                     <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
-                                                    <div class="pd-form-1-nested-list-item-btn-outer">
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer"><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -133,9 +128,7 @@
                                                 </div>
                                                 <div class="pd-form-1-nested-list-item-buttons">
                                                     <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
-                                                    <div class="pd-form-1-nested-list-item-btn-outer">
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
-                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    <div class="pd-form-1-nested-list-item-btn-outer"><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -147,8 +140,7 @@
                                                     <h3>Be happy</h3>
                                                     <p>Find something that makes you smile</p>
                                                 </div>
-                                                <div class="alternative-card pd-form-1-nested-list-item-buttons">
-                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                <div class="alternative-card pd-form-1-nested-list-item-buttons"><a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
                                                 </div>
                                             </div>
                                             <div class="mb-1 pd-form-1-nested-list-item"><a href="#" class="pd-form-1-nested-list-item-img-outer"> <img src="images/uploads/login-flower.jpg"> </a>
@@ -156,13 +148,11 @@
                                                     <h3>Take a photo</h3>
                                                     <p>Take a happy photo!</p>
                                                 </div>
-                                                <div class="alternative-card pd-form-1-nested-list-item-buttons">
-                                                    <a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
+                                                <div class="alternative-card pd-form-1-nested-list-item-buttons"><a href="#" class="pd-form-1-nested-list-item-view-outer"><img src="images/design-assets/icon-magnifying-glass-gray-600.svg" alt="view icon" width="20" height="20"></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <footer>
-                                            <a name="anchor" class="btn btn-outline-dark">Create Challenge</a>
+                                        <footer><a name="anchor" class="btn btn-outline-dark">Create Challenge</a>
                                         </footer>
                                     </div>
                                     <div class="mb-3 pd-admin-form-1-nested-list-img-loader">
@@ -173,7 +163,25 @@
                                         <div class="pd-form-1-nested-list-img-loader-list-body">
                                             <div class="mb-3 pd-form-1-nested-list-img-loader-list-item">
                                                 <header class="pd-form-1-nested-list-img-loader-list-item-header">
-                                                    <div class="pd-form-1-nested-list-img-loader-item-btn-outer"><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a><a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    <div class="pd-form-1-nested-list-img-loader-item-btn-outer">
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
+                                                    </div><a name="anchor"> <img src="images/design-assets/icon-trash-bin.svg" alt="delete icon" width="30" height="30"> </a>
+                                                </header>
+                                                <div class="mb-3">
+                                                    <label for="listTitle" class="form-label">Item Title</label>
+                                                    <input type="text" placeholder="Add a title for the list item" name="listTitle" class="form-control" id="listTitle">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="superCharge" class="form-label">Item Paragraph</label>
+                                                    <textarea type="text" rows="8" placeholder="Add text content for the list item" name="listPara" class="form-control" id="listPara"></textarea>
+                                                </div>
+                                            </div>
+                                            <div class="mb-3 pd-form-1-nested-list-img-loader-list-item">
+                                                <header class="pd-form-1-nested-list-img-loader-list-item-header">
+                                                    <div class="pd-form-1-nested-list-img-loader-item-btn-outer">
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img alt="re-order downwards icon" width="16" height="16" src="images/design-assets/icon-caret-white-up.svg"></a>
+                                                        <a href="#" name="anchor" class="pd-form-1-nested-list-item-btn"><img src="images/design-assets/icon-caret-white.svg" alt="re-order downwards icon" width="16" height="16"></a>
                                                     </div><a name="anchor"> <img src="images/design-assets/icon-trash-bin.svg" alt="delete icon" width="30" height="30"> </a>
                                                 </header>
                                                 <div class="mb-3">
@@ -186,8 +194,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <footer>
-                                            <a name="anchor" class="btn btn-outline-dark">Add List Item</a>
+                                        <footer><a name="anchor" class="btn btn-outline-dark">Add List Item</a>
                                         </footer>
                                     </div>
                                     <div class="mb-3">
