Added new card pd-cards-9

--- a/_factory_admin_page_menus_3.html
+++ b/_factory_admin_page_menus_3.html
@@ -22,8 +22,7 @@
             </nav>
             <main class="pd-admin-page-menu-3-content">
                 <header class="pd-admin-page-menu-3-header">
-                    <div class="pd-admin-page-menu-3-btn">
-                        <a href="javascript:toggleAdminMenu3()" name="anchor"><img src="images/design-assets/icon-menu.svg" alt="menu icon" width="34" height="34"></a>
+                    <div class="pd-admin-page-menu-3-btn"><a href="javascript:toggleAdminMenu3()" name="anchor"><img src="images/design-assets/icon-menu.svg" alt="menu icon" width="34" height="34"></a>
                     </div>
                 </header>
                 <div class="container-fluid">
