--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -563,6 +563,56 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-9</p>
             </div>
         </section>
+        <section class="pb-5 pd-cards-9 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 pb-4 pb-md-0 pe-0 pe-md-5">
+                        <header>
+                            <h3 class="pd-cards-9-label">Jamstack Developer</h3>
+                            <p class="pd-cards-9-headline"><strong>Your JamStack Developer</strong></p>
+                        </header>                         
+                        <p class="pd-cards-9-leading-para">Building your website using the Jamstack approach. A new way of building performance driven websites. Be part of the web revolution.</p>
+                        <ul class="pb-3">
+                            <li>Faster sites (globally)</li>
+                            <li>Higher Security</li>
+                            <li>Scalable with Demand</li>
+                            <li>Reduced maintenance</li>
+                            <li>Improved SEO performance</li>
+                            <li>Protecting your content</li>
+                        </ul>
+                        <footer><a href="#" name="anchor" class="pd-cards-9-btn">Explore JamStack</a>
+                        </footer>                         
+                    </div>
+                    <div class="col-md-4">
+                        <div class="mb-3 pd-cards-9-sub-card">
+                            <header class="pd-cards-9-sub-card-header"><a href="#" name="anchor"><img src="images/design-assets/logo-angular.svg"></a><a href="#" name="anchor"><img src="images/design-assets/logo-jekyll.svg" width="80"></a>
+                                <h3>Go Static</h3>
+                            </header>
+                            <div class="pd-cards-9-sub-card-body">
+                                <p>Benefit from a website that uses a static site generator.</p>
+                                <div class="pd-cards-9-sub-card-links">
+                                    <a href="#" name="anchor"><span></span>Static Site Benefits</a>
+                                    <a href="#" name="anchor"><span></span>Eleventy</a>
+                                    <a href="#" name="anchor"><span></span>Jekyll</a>
+                                    <a href="#" name="anchor"><span></span>CloudCannon CMS</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3 pd-cards-9-sub-card">
+                            <header class="pd-cards-9-sub-card-header"><a href="#" name="anchor"><img src="images/design-assets/logo-angular.svg"></a>
+                                <h3>Go Dynamic</h3>
+                            </header>
+                            <div class="pd-cards-9-sub-card-body">
+                                <p>Developing single page web apps with Angular. Perfect for dynamic websites with high interaction from the user.</p>
+                                <div class="pd-cards-9-sub-card-links">
+                                    <a href="#" name="anchor"><span></span>Discover Angular</a>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-10</p>
