--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -586,7 +586,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-6 pb-4 pb-md-0 pe-0 pe-md-5">
                         <header class="text-center text-md-start">
-                            <h3 class="pd-cards-9-label">Jamstack Developer</h3>
+                            <h2 class="pd-cards-9-label">Jamstack Developer</h2>
                             <img src="images/uploads/undraw_fast_loading_re_8oi3.svg" loading="lazy" class="pd-cards-9-img">
                             <p class="pd-cards-9-headline"><strong>Your JamStack Developer</strong></p>
                         </header>                         
@@ -634,6 +634,69 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-10</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-10 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="pd-cards-10-img-outer">
+                            <img src="images/uploads/undraw_flutter_developer_uk.svg" alt="image of a flutter developer" width="400" height="340">
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 pt-5 pt-md-0">
+                        <header class="text-center text-md-start">
+                            <h2 class="pd-cards-10-label">Flutter Developer</h2>
+                            <p class="pd-cards-10-headline"><strong>Developing for every screen</strong></p>
+                        </header>
+                        <p class="pd-cards-10-leading-para text-center text-md-start">Use our Flutter services to target multiple devices with one code base. We&rsquo;re experienced Flutter developers based in the UK.</p>
+                        <footer class="text-center text-md-start"><a href="#" name="anchor" class="pd-cards-10-btn">Explore Flutter</a>
+                        </footer>                         
+                    </div>
+                </div>
+                <div class="pt-5 row">
+                    <div class="col-lg-3 col-md-6 d-flex mb-3">
+                        <div class="pd-cards-10-sub-card">
+                            <header>
+                                <img src="images/design-assets/icon-checkmark.svg">
+                                <h3>Less &pound;</h3>
+                                <p>If you&rsquo;re targeting more than one device, then Flutter is very cost effective.</p>
+                            </header>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-3 col-md-6 d-flex mb-3">
+                        <div class="pd-cards-10-sub-card">
+                            <header>
+                                <img src="images/design-assets/icon-checkmark.svg">
+                                <h3>Fast</h3>
+                                <p>Slick, fast performance on any device.</p>
+                            </header>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-3 col-md-6 d-flex mb-3">
+                        <div class="pd-cards-10-sub-card">
+                            <header>
+                                <img src="images/design-assets/icon-checkmark.svg">
+                                <h3>Robust&nbsp;</h3>
+                                <p>Strong type safety and built-in testing means that your code is more robust.</p>
+                            </header>
+                        </div>                         
+                    </div>
+                    <div class="col-lg-3 col-md-6 d-flex mb-3">
+                        <div class="pd-cards-10-sub-card">
+                            <header>
+                                <img src="images/design-assets/icon-checkmark.svg">
+                                <h3>Beautiful&nbsp;</h3>
+                                <p>Go beyond Material looking apps. We have experience in building beautiful,  bespoke user interfaces.</p>
+                            </header>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-11</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
