Added in new wordpress block for homepage

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -699,6 +699,42 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-11</p>
             </div>
         </section>
+        <section class="bg-light pb-5 pd-cards-11 pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 mb-3 mb-md-0">
+                        <div class="pd-cards-11-svg-outer">
+                            <img>
+                            <img alt="wordpress logo" width="140" height="140" loading="lazy" src="images/uploads/undraw_wordpress_utxt.svg">
+                        </div>                         
+                    </div>
+                    <div class="col-md-8 text-center text-md-start">
+                        <header>
+                            <h2 class="pd-cards-11-label">WordPress Developer</h2>
+                            <p class="pd-cards-11-headline"><strong>WordPress Solutions</strong></p>
+                        </header>
+                        <p class="pd-cards-11-leading-para">We know how many of our clients love WordPress so we&rsquo;ve worked hard to get the best high performance solutions for you.</p>
+                        <footer class="pd-cards-11-footer"><a href="#" name="anchor" class="mb-4 pd-cards-11-btn"><span></span>Explore WordPress</a>
+                            <div class="pd-cards-11-sub-cards-outer">
+                                <article class="mb-3 pd-cards-11-card text-start"><a href="#" name="anchor" class="mb-2 pd-cards-11-card-svg-link pt-2"><img alt="bricks builder logo" width="40" height="40" loading="lazy" src="images/design-assets/bricks-logo.svg"></a>
+                                    <h3>Bricks</h3>
+                                    <p>Lightweight, easy to use, powerful features.</p><a href="#" name="anchor" class="pd-cards-11-link"><span></span>Explore Bricks</a>
+                                </article>
+                                <article class="mb-3 pd-cards-11-card text-start"><a href="#" name="anchor" class="mb-2 pd-cards-11-card-svg-link pt-2"><img alt="bricks builder logo" width="40" height="40" loading="lazy" src="images/design-assets/livecanvas-logo.svg"></a>
+                                    <h3>LiveCanvas</h3>
+                                    <p>Lightweight, easy to use, powerful features.</p><a href="#" name="anchor" class="pd-cards-11-link"><span></span>Explore LiveCanvas</a>
+                                </article>
+                            </div>
+                        </footer>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-12</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
