Added in new heroes for Pendigital

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -470,12 +470,95 @@ Focus on retaining candidates and clients.</strong></p>
                                 <a href="#" name="anchor" class="pd-hero-11-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book free consultation</a>
                                 <a href="#" name="anchor" class="pd-hero-11-btn-light">Find out more</a>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-md-6">
                         <div class="align-items-center d-flex flex-column justify-content-center pd-hero-11-img-outer">
                             <img src="images/uploads/hero-scissors-office.svg" alt="image of web developer" width="400" height="400" class="img-fluid"/>
-                        </div>                                                  
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-12</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
+            </div>
+        </section>
+        <section class="pd-hero-12">
+            <div class="container-xxl">
+                <div class="row">
+                    <div class="col-lg-6 d-flex flex-column justify-content-center p-lg-2 pb-4 pe-2 ps-2 pt-2 text-center text-lg-start">
+                        <header>
+                            <h1>Freelance Web Developer UK</h1>
+                            <div class="pb-2 pt-2">
+                                <picture>
+                                    <source srcset="/images/uploads/avatar-emma-bowerbank-freelancer.webp" type="image/webp"/>
+                                    <img src="/images/uploads/avatar-emma-bowerbank-freelancer.jpg" alt="image of man working" width="80" height="80" loading="lazy" class="pd-hero-12-img-thumbnail"/>
+                                </picture>
+                                <picture>
+                                    <source srcset="/images/uploads/avatar-tim-bowerbank-freelancer.webp"/>
+                                    <img alt="image of woman working" width="80" height="80" src="/images/uploads/avatar-tim-bowerbank-freelancer.jpg" loading="lazy" class="pd-hero-12-img-thumbnail pd-hero-12-img-thumbnail-right"/>
+                                </picture>
+                            </div>
+                            <p class="pd-hero-12-headline"><strong>Super-helpful support for your web projects</strong></p>
+                        </header>
+                        <div class="pd-hero-12-subHeadline">
+                            <p>More than 30 years combined coding experience. Looking forward to discussing your web project to see how we can help.</p>
+                        </div>
+                        <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2"><a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-12-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a><a href="#" name="anchor" class="pd-hero-12-btn-light">Learn More</a>
+                        </footer>                         
+                    </div>
+                    <div class="col-lg-6 p-0" style="position: relative;">
+                        <div class="pd-hero-12-img-outer">
+                            <img src="images/uploads/hero-half-pendigital-team-2.jpg">
+                        </div>
+                        <div class="pd-hero-12-img-overlay"></div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-hero-13</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;"></p>
+            </div>
+        </section>
+        <section class="pd-hero-13">
+            <picture>
+                <source srcset="/images/uploads/hero-pendigital-team-3.webp 1800w, 
+                                /images/uploads/hero-pendigital-team-mob-3.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                <img srcset="/images/uploads/hero-pendigital-team-3.jpg 1800w,
+                            /images/uploads/hero-pendigital-team-mob-3.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-pendigital-team-mob-3.jpg" class="pd-hero-13-img" onload="imageLoadedListener10()" loading="lazy"/>
+            </picture>
+            <div class="pd-hero-13-img-overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 d-flex flex-column justify-content-center p-lg-2 pb-4 pe-2 ps-2 pt-2 text-center text-lg-start">
+                        <div class="pd-hero-13-content-outer">
+                            <header>
+                                <h1>Freelance Web Developer UK</h1>
+                                <div class="pb-2 pt-2">
+                                    <picture>
+                                        <source srcset="/images/uploads/avatar-emma-bowerbank-freelancer.webp" type="image/webp"/>
+                                        <img src="/images/uploads/avatar-emma-bowerbank-freelancer.jpg" alt="image of man working" width="80" height="80" loading="lazy" class="pd-hero-13-img-thumbnail"/>
+                                    </picture>
+                                    <picture>
+                                        <source srcset="/images/uploads/avatar-tim-bowerbank-freelancer.webp"/>
+                                        <img alt="image of woman working" width="80" height="80" src="/images/uploads/avatar-tim-bowerbank-freelancer.jpg" loading="lazy" class="pd-hero-13-img-thumbnail pd-hero-13-img-thumbnail-right"/>
+                                    </picture>
+                                </div>
+                                <p class="pd-hero-13-headline"><strong>Super-helpful support for your web projects</strong></p>
+                            </header>
+                            <div class="pd-hero-13-subHeadline">
+                                <p>Two web freelancers with more than 30 years combined coding experience. Looking forward to discussing your web project to see how we can help.</p>
+                            </div>
+                            <footer class="align-items-center align-items-lg-center d-flex flex-column flex-lg-row justify-content-lg-start justify-content-start pt-2">
+                                <a href="#" name="anchor" class="btn btn-primary mb-3 mb-lg-0 mt-lg-0 pd-hero-13-btn"><span><img src="images/design-assets/icon-arrow-01.svg" alt="icon of arrow" width="14" height="14" class="me-1"/></span>Book Free Consultation</a>
+                                <a href="#" name="anchor" class="pd-hero-13-btn-light">Learn More</a>
+                            </footer>
+                        </div>                         
                     </div>
                 </div>
             </div>
